k8s-operator/config/integrations/litellm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
spec:
  selector:
    app: litellm
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
